# CS5316-Report-Source-Code

./: AVLTREEVSHASH.docx
Sprint5/PA_Final/: CMakeLists.txt  PA_Final.pro  avltree.h  document.cpp  document.h  documentparser.cpp  documentparser.h  fix.cpp  fix.h  hashtable.h  index.h  interactive.cpp  interactive.h  main.cpp  maintenance.cpp  maintenance.h  query.cpp  query.h  stemmer.cpp  stemmer.h  term.cpp  term.h  test.cpp  type2.cpp  type2.h  ui.cpp  ui.h
lib/: term.cpp
lib/rapidjson-master/: .gitignore  readme.md  readme.zh-cn.md  travis-doxygen.sh
lib/rapidjson-master/doc/: Doxyfile.in  Doxyfile.zh-cn.in  dom.md  dom.zh-cn.md  encoding.md  encoding.zh-cn.md  (+15 more)
scotus-med/: 101010.json  101011.json  101012.json  101013.json  101014.json  101015.json  101016.json  101017.json  101018.json  101019.json  101110.json  101111.json  101112.json  101113.json  101114.json  101115.json  101116.json  101117.json  101118.json  101119.json  101210.json  101211.json  101212.json  101213.json  101214.json  101215.json  101216.json  101217.json  101218.json  101219.json  101312.json  101314.json  101319.json  101410.json  101411.json  101412.json  101413.json  101414.json  101415.json  101416.json  (+434 more)
scotus-small/: 101310.json  101311.json  101313.json  101315.json  101316.json  101317.json  101318.json  111313.json  111315.json  111316.json  121311.json  121313.json  121314.json  121315.json  121316.json  121317.json  121318.json  131310.json  131311.json  131312.json  131313.json  131315.json  131319.json  141310.json  141312.json  141313.json  141318.json  141319.json
